<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Blok login -->
    <LinearLayout
        android:id="@+id/loginBlock"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/undiknas_color_1024x1024"
            android:contentDescription="@string/logo_desc"
            android:scaleType="fitCenter"
            android:layout_marginBottom="16dp"/>

        <!-- Judul Login -->
        <TextView
            android:id="@+id/textViewLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login Dosen"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"/>

        <!-- Kolom input Nama Dosen -->
        <EditText
            android:id="@+id/editTextNamaDosen"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama_dosen"
            android:padding="16dp"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <!-- Tombol MASUK -->
        <Button
            android:id="@+id/btnMasuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_masuk"
            android:background="@drawable/button_rounded"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
